--- a/src/main/resources/com/mmn/circuitscourts/css/style.css
+++ b/src/main/resources/com/mmn/circuitscourts/css/style.css
@@ -315,6 +315,58 @@
     -fx-shape: "M336 352c97.2 0 176-78.8 176-176S433.2 0 336 0S160 78.8 160 176c0 18.7 2.9 36.8 8.3 53.7L7 391c-4.5 4.5-7 10.6-7 17v80c0 13.3 10.7 24 24 24h80c13.3 0 24-10.7 24-24V448h40c13.3 0 24-10.7 24-24V384h40c6.4 0 12.5-2.5 17-7l33.3-33.3c16.9 5.4 35 8.3 53.7 8.3zm40-176c-22.1 0-40-17.9-40-40s17.9-40 40-40s40 17.9 40 40s-17.9 40-40 40z";
 }
 
+.sidebar-tab-img-marketplace {
+    -icon-paint: linear-gradient(from 0.0% 0.0% to 100.0% 0.0%, #2970FF 0.2%, #0040C1 99.99%);
+    -fx-background-color: -icon-paint;
+    -width-size: 14;
+    -height-size: 14;
+    -fx-min-height: -height-size;
+    -fx-min-width: -width-size;
+    -fx-max-height: -height-size;
+    -fx-max-width: -width-size;
+
+    -fx-shape: "M547.6 103.8L490.3 13.1C485.2 5 476.1 0 466.4 0H109.6C99.9 0 90.8 5 85.7 13.1L28.3 103.8c-29.6 46.8-3.4 111.9 51.9 119.4c4 .5 8.1 .8 12.1 .8c26.1 0 49.3-11.4 65.2-29c15.9 17.6 39.1 29 65.2 29c26.1 0 49.3-11.4 65.2-29c15.9 17.6 39.1 29 65.2 29c26.2 0 49.3-11.4 65.2-29c16 17.6 39.1 29 65.2 29c4.1 0 8.1-.3 12.1-.8c55.5-7.4 81.8-72.5 52.1-119.4zM499.7 254.9l-.1 0c-5.3 .7-10.7 1.1-16.2 1.1c-12.4 0-24.3-1.9-35.4-5.3V384H128V250.6c-11.2 3.5-23.2 5.4-35.6 5.4c-5.5 0-11-.4-16.3-1.1l-.1 0c-4.1-.6-8.1-1.3-12-2.3V384v64c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V384 252.6c-4 1-8 1.8-12.3 2.3z";
+}
+
+.sidebar-tab-img-adresses {
+    -icon-paint: linear-gradient(from 0.0% 0.0% to 100.0% 0.0%, #2970FF 0.2%, #0040C1 99.99%);
+    -fx-background-color: -icon-paint;
+    -width-size: 14;
+    -height-size: 15;
+    -fx-min-height: -height-size;
+    -fx-min-width: -width-size;
+    -fx-max-height: -height-size;
+    -fx-max-width: -width-size;
+
+    -fx-shape: "M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 256c-35.3 0-64-28.7-64-64s28.7-64 64-64s64 28.7 64 64s-28.7 64-64 64z";
+}
+
+.sidebar-tab-img-profil {
+    -icon-paint: linear-gradient(from 0.0% 0.0% to 100.0% 0.0%, #2970FF 0.2%, #0040C1 99.99%);
+    -fx-background-color: -icon-paint;
+    -width-size: 14;
+    -height-size: 14;
+    -fx-min-height: -height-size;
+    -fx-min-width: -width-size;
+    -fx-max-height: -height-size;
+    -fx-max-width: -width-size;
+
+    -fx-shape: "M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0S96 57.3 96 128s57.3 128 128 128zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z";
+}
+
+.sidebar-tab-img-ticket {
+    -icon-paint: linear-gradient(from 0.0% 0.0% to 100.0% 0.0%, #2970FF 0.2%, #0040C1 99.99%);
+    -fx-background-color: -icon-paint;
+    -width-size: 14;
+    -height-size: 14;
+    -fx-min-height: -height-size;
+    -fx-min-width: -width-size;
+    -fx-max-height: -height-size;
+    -fx-max-width: -width-size;
+
+    -fx-shape: "M0 128C0 92.7 28.7 64 64 64H512c35.3 0 64 28.7 64 64v80c-26.5 0-48 21.5-48 48s21.5 48 48 48v80c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V304c26.5 0 48-21.5 48-48s-21.5-48-48-48V128z";
+}
+
 .sidebar-profil-name {
     -fx-font: 12px 'Helvetica';
     -fx-text-fill: #101828;
@@ -406,6 +458,116 @@
     -fx-font: 20px 'Helvetica';
     -fx-font-weight: bold;
     -fx-text-fill: #154FEF;
+}
+
+.dashboard-welcome {
+    -fx-background-color: white;
+    -fx-background-radius: 8px;
+    -fx-border-radius: 8px;
+    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.1), 8, -2px, 0px, 4px);
+}
+
+.dashboard-welcome-title {
+    -fx-font: 20px 'Helvetica';
+    -fx-font-weight: 600;
+}
+
+.dashboard-welcome-subtitle {
+    -fx-font: 12px 'Helvetica';
+    -fx-text-fill: #667085;
+}
+
+.dashboard-welcome-buttonwhite {
+    -fx-cursor: hand;
+    -fx-font: 12px 'Helvetica';
+    -fx-font-weight: 700;
+    -fx-background-color: white;
+    -fx-background-radius: 4px;
+    -fx-border-radius: 4px;
+    -fx-border-style: solid;
+    -fx-border-width: 1px;
+    -fx-border-color: #EAECF0;
+}
+
+.dashboard-welcome-buttonwhite:hover {
+    -fx-border-color: #344054;
+    -fx-background-color: #F8FAFC;
+}
+
+.dashboard-welcome-buttonwhite:pressed {
+    -fx-text-fill: #667085;
+    -fx-background-color: #F8FAFC;
+    -fx-border-color: #667085;
+}
+
+.dashboard-welcome-buttonblue {
+    -fx-cursor: hand;
+    -fx-font: 12px 'Helvetica';
+    -fx-font-weight: 700;
+    -fx-background-color: linear-gradient(from 0.0% 0.0% to 100.0% 0.0%, #2970FF 0.2%, #0040C1 99.99%);
+    -fx-background-radius: 4px;
+    -fx-border-color: linear-gradient(from 0.0% 0.0% to 100.0% 0.0%, #2970FF 0.2%, #0040C1 99.99%);
+    -fx-border-width: 1px;
+    -fx-border-style: solid;
+    -fx-border-radius: 4px;
+    -fx-text-fill: white;
+}
+
+.dashboard-welcome-buttonblue:hover {
+    -fx-background-color: #154FEF;
+}
+
+.dashboard-welcome-buttonblue:pressed {
+    -fx-background-color: #5280FF;
+    -fx-border-color: #5280FF;
+}
+
+.dashboard-welcome-avatar {
+    -icon-paint: #154FEF;
+    -fx-background-color: -icon-paint;
+    -width-size: 24;
+    -height-size: 24;
+    -fx-min-height: -height-size;
+    -fx-min-width: -width-size;
+    -fx-max-height: -height-size;
+    -fx-max-width: -width-size;
+
+    -fx-shape: "M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0S96 57.3 96 128s57.3 128 128 128zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z";
+}
+
+.notificationsFeed {
+    -fx-background-color: white;
+    -fx-background-radius: 8px;
+    -fx-border-radius: 8px;
+    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.1), 8, -2px, 0px, 4px);
+}
+
+.notificationsFeed-line {
+    -fx-background-color: white;
+    -fx-border-style: solid;
+    -fx-border-width: 0 0 1px 0;
+    -fx-border-color: #EAECF0;
+}
+
+.notificationsFeed-line-title {
+    -fx-font: 14px 'Helvetica';
+}
+
+.notificationsFeed-line-subtitle {
+    -fx-font: 12px 'Helvetica';
+    -fx-text-fill: #667085;
+}
+
+.notificationsFeed-line-time {
+    -fx-font: 10px 'Helvetica';
+    -fx-text-fill: #667085;
+}
+
+.notificationsFeed-line-new {
+    -fx-background-color: #F8FAFC;
+    -fx-border-style: solid;
+    -fx-border-width: 0 0 1px 0;
+    -fx-border-color: #EAECF0;
 }
 
 /* Commande Interface */
@@ -508,38 +670,6 @@
 .main-title {
     -fx-font: 24px 'Helvetica';
     -fx-font-weight: bold;
-}
-
-.table-view {
-    -fx-size: 30px;
-    -fx-pref-tile-height: 64px;
-}
-
-.table-view:focused {
-    -fx-border-style: none;
-}
-
-.table-view .cell {
-    -fx-min-height: 64px;
-    -fx-alignment: center-left;
-}
-
-.table-view .column-resize-line {
-    -fx-background-color: red;
-}
-
-.table-view .column-header {
-    -fx-background-color: #F8FAFC;
-    -fx-border-style: solid;
-    -fx-border-width: 1px;
-    -fx-border-color: 1px;
-    -fx-font: 14px 'Helvetica';
-    -fx-text-fill: #475467;
-    -fx-cell-size: 56px;
-}
-
-.table-view .cell {
-    -fx-font: 14px 'Helvetica';
 }
 
 .scroll-pane > .view-port {
