--- a/src/main/resources/com/mmn/circuitscourts/fxml/Client/Dashboard.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Client/Dashboard.fxml
@@ -1,14 +1,139 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.mmn.circuitscourts.controller.client.ClientController"
-            prefHeight="400.0" prefWidth="600.0">
+<StackPane fx:id="stackPane" minHeight="800.0" minWidth="1200.0" style="-fx-background-color: #EAECF0;" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mmn.circuitscourts.controller.client.ClientController">
+    <children>
+        <BorderPane fx:id="container" prefHeight="700.0" prefWidth="1000.0">
+            <left>
+                <fx:include source="Sidebar.fxml" />
+            </left>
+            <center>
 
-</AnchorPane>
+            </center>
+            <center>
+                <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+                    <children>
+                        <HBox alignment="CENTER_LEFT" maxWidth="850.0" prefHeight="79.0" prefWidth="800.0" styleClass="dashboard-welcome">
+                            <VBox.margin>
+                                <Insets top="50.0" />
+                            </VBox.margin>
+                            <children>
+                                <Label prefHeight="17.0" prefWidth="31.0">
+                                    <graphic>
+                                        <Region styleClass="dashboard-welcome-avatar" />
+                                    </graphic>
+                           <HBox.margin>
+                              <Insets left="30.0" />
+                           </HBox.margin>
+                                </Label>
+                                <VBox alignment="CENTER_LEFT" prefHeight="79.0" prefWidth="542.0">
+                                    <children>
+                                        <Label fx:id="welcomeLabel" styleClass="dashboard-welcome-title" text="Bonjour Nassim" />
+                                        <Label styleClass="dashboard-welcome-subtitle" text="Vous avez 2 notification(s)" />
+                                    </children>
+                                    <padding>
+                                        <Insets left="30.0" />
+                                    </padding>
+                                </VBox>
+                                <HBox alignment="CENTER" prefHeight="79.0" prefWidth="224.0">
+                                    <children>
+                                        <Button prefHeight="32.0" prefWidth="131.0" styleClass="dashboard-welcome-buttonwhite" text="Mes commandes" />
+                                        <Button prefHeight="32.0" prefWidth="63.0" styleClass="dashboard-welcome-buttonblue" text="Profil">
+                                            <HBox.margin>
+                                                <Insets left="25.0" />
+                                            </HBox.margin>
+                                        </Button>
+                                    </children>
+                                    <HBox.margin>
+                                        <Insets />
+                                    </HBox.margin>
+                                </HBox>
+                            </children>
+                        </HBox>
+                        <HBox alignment="CENTER_LEFT" prefHeight="500.0" prefWidth="200.0">
+                            <children>
+                                <VBox maxHeight="450.0" maxWidth="951.0" prefHeight="450.0" prefWidth="400.0" styleClass="commande-tableview" VBox.vgrow="ALWAYS">
+                                    <children>
+                                        <HBox alignment="CENTER_LEFT" prefHeight="56" prefWidth="400.0" styleClass="commande-tableview-header">
+                                            <children>
+                                                <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="200.0" prefWidth="200.0" styleClass="commande-tableview-header-title" text="Commandes en cours">
+                                                    <HBox.margin>
+                                                        <Insets left="40.0" />
+                                                    </HBox.margin>
+                                                </Label>
+                                                <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" prefWidth="200.0" styleClass="commande-tableview-header-title" text="Etat" />
+                                            </children>
+                                            <padding>
+                                                <Insets right="40.0" />
+                                            </padding>
+                                        </HBox>
+                                    </children>
+                                    <HBox.margin>
+                                        <Insets left="30.0" />
+                                    </HBox.margin>
+                                </VBox>
+                                <VBox maxHeight="450.0" prefHeight="450.0" prefWidth="350.0" styleClass="notificationsFeed">
+                                    <HBox.margin>
+                                        <Insets left="50.0" />
+                                    </HBox.margin>
+                                    <children>
+                                        <VBox alignment="CENTER_LEFT" prefHeight="56.0" prefWidth="100.0" styleClass="commande-tableview-header">
+                                            <children>
+                                                <Label styleClass="commande-tableview-header-title" text="Notifications" />
+                                            </children>
+                                            <padding>
+                                                <Insets left="20.0" />
+                                            </padding>
+                                        </VBox>
+                                        <HBox alignment="CENTER_LEFT" maxHeight="67.0" prefHeight="67.0" prefWidth="200.0" styleClass="notificationsFeed-line-new">
+                                            <children>
+                                                <VBox alignment="CENTER_LEFT" prefHeight="67.0" prefWidth="272.0">
+                                                    <children>
+                                                        <Label styleClass="notificationsFeed-line-title" text="Notifications X" />
+                                                        <Label styleClass="notificationsFeed-line-subtitle" text="Subtitle" />
+                                                    </children>
+                                                    <padding>
+                                                        <Insets left="20.0" />
+                                                    </padding>
+                                                </VBox>
+                                                <Label text="Il y a 6 heures" />
+                                            </children>
+                                        </HBox>
+                                        <HBox alignment="CENTER_LEFT" maxHeight="67.0" prefHeight="67.0" prefWidth="200.0" styleClass="notificationsFeed-line">
+                                            <children>
+                                                <VBox alignment="CENTER_LEFT" prefHeight="67.0" prefWidth="272.0">
+                                                    <children>
+                                                        <Label styleClass="notificationsFeed-line-title" text="Notifications X" />
+                                                        <Label styleClass="notificationsFeed-line-subtitle" text="Subtitle" />
+                                                    </children>
+                                                    <padding>
+                                                        <Insets left="20.0" />
+                                                    </padding>
+                                                </VBox>
+                                                <Label text="Il y a 6 heures" />
+                                            </children>
+                                        </HBox>
+                                    </children>
+                                </VBox>
+                            </children>
+                            <VBox.margin>
+                                <Insets top="50.0" />
+                            </VBox.margin>
+                        </HBox>
+                    </children>
+                    <BorderPane.margin>
+                        <Insets bottom="40.0" left="40.0" right="40.0" top="40.0" />
+                    </BorderPane.margin>
+                </VBox>
+            </center>
+        </BorderPane>
+    </children>
+</StackPane>
