controller.producteur retourne mnt les tournées associées  au producteur

--- a/src/main/resources/com/mmn/circuitscourts/fxml/Producteur/Tournees.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Producteur/Tournees.fxml
@@ -33,10 +33,8 @@
                                                 <Insets left="40.0" />
                                             </HBox.margin>
                                         </Label>
-                                        <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" prefWidth="151.0" styleClass="commande-tableview-header-title" text="Horaire de début" />
-                                        <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="151.0" prefWidth="151.0" styleClass="commande-tableview-header-title" text="Horaire de fin" />
-                                        <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" prefWidth="151.0" styleClass="commande-tableview-header-title" text="Véhicule" />
-                                        <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" prefWidth="151.0" styleClass="commande-tableview-header-title" text="Commandes" />
+                                        <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" prefWidth="151.0" styleClass="commande-tableview-header-title" text="Horaire " />
+                                        <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" prefWidth="151.0" styleClass="commande-tableview-header-title" text="numImmat" />
                                     </children>
                                     <padding>
                                         <Insets right="40.0" />
