--- a/src/main/resources/com/mmn/circuitscourts/fxml/Producteur/Vehicules.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Producteur/Vehicules.fxml
@@ -45,7 +45,7 @@
                         </VBox>
                         <Pane>
                             <children>
-                                <Button fx:id="addButton" layoutX="847.0" layoutY="-24.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="48.0" styleClass="addButton" textAlignment="CENTER">
+                                <Button fx:id="addButton" layoutX="847.0" layoutY="-24.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="48.0" styleClass="addButton" textAlignment="CENTER" onMouseClicked="#onAddButton">
                                     <graphic>
                                         <Region styleClass="addButton-img" />
                                     </graphic>
