--- a/src/main/resources/com/mmn/circuitscourts/fxml/Producteur/Sidebar.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Producteur/Sidebar.fxml
@@ -93,6 +93,23 @@
                         <Region styleClass="sidebar-tab-img-vehicules" />
                     </graphic>
                 </Button>
+                <Label maxWidth="216.0" prefWidth="216.0" styleClass="sidebar-tab-subtitle"
+                       text="Gestion des ventes">
+                    <padding>
+                        <Insets bottom="7.0" left="10.0" right="10.0" top="7.0"/>
+                    </padding>
+                    <VBox.margin>
+                        <Insets bottom="5" top="5"/>
+                    </VBox.margin>
+                </Label>
+                <Button fx:id="articlesTab" maxWidth="216" prefWidth="216" styleClass="sidebar-tab" alignment="TOP_LEFT" text=" Articles" onMouseClicked="#onArticleButton" pickOnBounds="true">
+                    <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                    </padding>
+                    <graphic>
+                        <Region styleClass="sidebar-tab-img-articles" />
+                    </graphic>
+                </Button>
             </children>
             <padding>
                 <Insets left="15.0" top="40.0"/>
