--- a/src/main/resources/com/mmn/circuitscourts/fxml/Admin/AddCommande.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Admin/AddCommande.fxml
@@ -2,18 +2,21 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.layout.Region?>
-<StackPane fx:id="stackPane" minHeight="800.0" minWidth="1200.0" style="-fx-background-color: #EAECF0;"
-           stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
-           fx:controller="com.mmn.circuitscourts.controller.admin.AddCommandesProducteur">
+<StackPane fx:id="stackPane" minHeight="800.0" minWidth="1200.0" style="-fx-background-color: #EAECF0;" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mmn.circuitscourts.controller.admin.AddCommandesController">
     <children>
         <BorderPane fx:id="container" prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: white;">
             <left>
-                <fx:include source="Sidebar.fxml"/>
+                <fx:include source="Sidebar.fxml" />
             </left>
             <center>
 
@@ -21,17 +24,60 @@
             <center>
                 <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
                     <children>
-                        <Button styleClass="back-button" mnemonicParsing="false" text="Retour" pickOnBounds="true" onMouseClicked="#onBackButton">
+                        <Button mnemonicParsing="false" onMouseClicked="#onBackButton" pickOnBounds="true" styleClass="back-button" text="Retour">
                             <graphic>
-                                <Region styleClass="back-button-img"/>
+                                <Region styleClass="back-button-img" />
                             </graphic>
                         </Button>
+                        <Label styleClass="main-title" text="Ajout d'une commande">
+                            <VBox.margin>
+                                <Insets top="20.0" />
+                            </VBox.margin></Label>
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                            <children>
+                                <ComboBox minHeight="40.0" minWidth="250.0" prefWidth="150.0" promptText="Selectionner l'article"/>
+                                <TextField maxWidth="250.0" prefHeight="40.0" prefWidth="250.0" promptText="Quantité">
+                                    <HBox.margin>
+                                        <Insets left="200.0" />
+                                    </HBox.margin>
+                                </TextField>
+                            </children>
+                            <VBox.margin>
+                                <Insets top="75.0" />
+                            </VBox.margin>
+                        </HBox>
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                            <children>
+                                <ComboBox minHeight="40.0" minWidth="250.0" prefWidth="150.0" promptText="Selectionner le client"/>
+                                <TextField minHeight="40.0" minWidth="250.0" promptText="Horaire de livraison">
+                                    <HBox.margin>
+                                        <Insets left="200.0" />
+                                    </HBox.margin>
+                                </TextField>
+                            </children>
+                            <VBox.margin>
+                                <Insets top="25.0" />
+                            </VBox.margin>
+                        </HBox>
+                        <HBox alignment="CENTER" minWidth="0.0" prefHeight="100.0" prefWidth="200.0">
+                            <children>
+                                <DatePicker minHeight="40.0" minWidth="250.0" promptText="Selectionner la date"/>
+                            </children>
+                            <VBox.margin>
+                                <Insets />
+                            </VBox.margin>
+                        </HBox>
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                            <children>
+                                <Button minHeight="40.0" minWidth="192.0" mnemonicParsing="false" text="Ajouter la commande" onMouseClicked="#onCreateButton" styleClass="addCommandeButton"/>
+                            </children>
+                        </HBox>
                     </children>
                     <BorderPane.margin>
-                        <Insets/>
+                        <Insets />
                     </BorderPane.margin>
                     <padding>
-                        <Insets bottom="30.0" left="40.0" right="40.0" top="20.0"/>
+                        <Insets bottom="30.0" left="40.0" right="40.0" top="20.0" />
                     </padding>
                 </VBox>
             </center>
