--- a/src/main/resources/com/mmn/circuitscourts/fxml/Producteur/AddVehicule.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Producteur/AddVehicule.fxml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-        <?import javafx.geometry.Insets?>
-        <?import javafx.scene.control.Button?>
-        <?import javafx.scene.layout.BorderPane?>
-        <?import javafx.scene.layout.StackPane?>
-        <?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 
-        <?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.control.TextField?>
 <StackPane fx:id="stackPane" minHeight="800.0" minWidth="1200.0" style="-fx-background-color: #EAECF0;"
            stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
            fx:controller="com.mmn.circuitscourts.controller.producteur.AddVehiculeController">
@@ -27,6 +29,28 @@
                             </graphic>
                         </Button>
                     </children>
+                    <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                        <children>
+                            <TextField fx:id="numImmat" minHeight="40.0" minWidth="250.0" prefWidth="150.0" promptText="numImmat"/>
+                            <TextField fx:id="poids" maxWidth="250.0" prefHeight="40.0" prefWidth="250.0" promptText="Poids du véhicule">
+                                <HBox.margin>
+                                    <Insets left="200.0" />
+                                </HBox.margin>
+                            </TextField>
+                        </children>
+                        <VBox.margin>
+                            <Insets top="75.0" />
+                        </VBox.margin>
+                    </HBox>
+
+                    <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                        <children>
+                            <Button minHeight="40.0" minWidth="192.0" mnemonicParsing="false" text="Ajouter le véhicule" styleClass="addVehiculeButton" onMouseClicked="#onCreateButton"/>
+                        </children>
+                        <VBox.margin>
+                            <Insets top="75.0" />
+                        </VBox.margin>
+                    </HBox>
                     <BorderPane.margin>
                         <Insets/>
                     </BorderPane.margin>
