--- a/src/main/resources/com/mmn/circuitscourts/fxml/Client/Marketplace.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Client/Marketplace.fxml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.layout.*?>
-
-<StackPane fx:id="stackPane" minHeight="800.0" minWidth="1200.0" style="-fx-background-color: #EAECF0;"
+<StackPane fx:id="stackPane" minHeight="800.0" minWidth="1200.0" style="-fx-background-color: white;"
            stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
            fx:controller="com.mmn.circuitscourts.controller.client.MarketplaceController">
     <children>
@@ -12,7 +18,41 @@
                 <fx:include source="Sidebar.fxml"/>
             </left>
             <center>
+                <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+                    <children>
+                        <VBox maxHeight="130.0" prefHeight="130.0" prefWidth="100.0"
+                              styleClass="marketplace-topcontainer">
+                            <children>
+                                <Label styleClass="main-title" text="Marketplace"/>
+                                <HBox fx:id="tagsContainer" prefHeight="100.0" prefWidth="200.0">
+                                    <children>
+                                    </children>
+                                    <VBox.margin>
+                                        <Insets top="5.0"/>
+                                    </VBox.margin>
+                                </HBox>
+                            </children>
+                            <padding>
+                                <Insets bottom="15.0" left="50.0" top="49.0"/>
+                            </padding>
+                        </VBox>
+                        <ScrollPane maxHeight="668.0" maxWidth="950.0" prefHeight="670.0" prefWidth="200.0">
+                            <content>
+                                <VBox fx:id="lineContainer" prefHeight="664.0" prefWidth="932.0">
+                                    <children>
 
+                                    </children>
+                                    <padding>
+                                        <Insets bottom="10"/>
+                                    </padding>
+                                </VBox>
+                            </content>
+                            <VBox.margin>
+                                <Insets left="2.0" top="1.0"/>
+                            </VBox.margin>
+                        </ScrollPane>
+                    </children>
+                </VBox>
             </center>
         </BorderPane>
     </children>
