--- a/src/main/resources/com/mmn/circuitscourts/fxml/Producteur/AddArticles.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Producteur/AddArticles.fxml
@@ -7,6 +7,10 @@
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.layout.Region?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ComboBox?>
 <StackPane fx:id="stackPane" minHeight="800.0" minWidth="1200.0" style="-fx-background-color: #EAECF0;"
            stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
            fx:controller="com.mmn.circuitscourts.controller.producteur.AddArticlesController">
@@ -20,13 +24,109 @@
             <center>
                 <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
                     <children>
-                        <Button styleClass="back-button" mnemonicParsing="false" text="Retour" pickOnBounds="true" onMouseClicked="#onBackButton">
+                        <Button styleClass="back-button" mnemonicParsing="false" text="Retour" pickOnBounds="true"
+                                onMouseClicked="#onBackButton">
                             <graphic>
                                 <Region styleClass="back-button-img"/>
                             </graphic>
                         </Button>
-                    </children>
+                        <Label styleClass="main-title" text="Nouvel article">
+                            <VBox.margin>
+                                <Insets top="25.0"/>
+                            </VBox.margin>
+                        </Label>
+                        <HBox alignment="CENTER" minHeight="447" minWidth="763" prefHeight="100" prefWidth="200"
+                              spacing="70">
+                            <children>
+                                <VBox maxHeight="414.0" prefHeight="414.0" prefWidth="240.0"
+                                      styleClass="marketplace-article">
+                                    <children>
+                                        <VBox fx:id="imageContainer" alignment="CENTER" prefHeight="200.0" prefWidth="240.0"
+                                              styleClass="marketplace-article-img">
+                                            <children>
 
+                                            </children>
+                                        </VBox>
+                                        <HBox prefHeight="24.0" prefWidth="240.0">
+                                            <children>
+                                                <Label fx:id="tagName" maxHeight="24.0" styleClass="marketplace-tag"
+                                                       text="Catégorie 1">
+                                                    <padding>
+                                                        <Insets bottom="2.0" left="10.0" right="10.0"
+                                                                top="2.0"/>
+                                                    </padding>
+                                                </Label>
+                                            </children>
+                                            <padding>
+                                                <Insets bottom="5.0" left="10.0" right="5.0"
+                                                        top="10.0"/>
+                                            </padding>
+                                        </HBox>
+                                        <VBox prefHeight="167.0" prefWidth="238.0">
+                                            <children>
+                                                <Label fx:id="articleName" styleClass="marketplace-article-title"
+                                                       text="Article X"/>
+                                                <Label fx:id="articleDescription" styleClass="marketplace-article-description"
+                                                       text="Description">
+                                                    <VBox.margin>
+                                                        <Insets top="20.0"/>
+                                                    </VBox.margin>
+                                                </Label>
+                                                <HBox alignment="CENTER_LEFT">
+                                                    <VBox.margin>
+                                                        <Insets top="50.0"/>
+                                                    </VBox.margin>
+                                                    <children>
+                                                        <Label fx:id="articlePrice" styleClass="marketplace-article-price" prefHeight="27.0" prefWidth="123.0"
+                                                               text=""/>
+                                                        <Button mnemonicParsing="false"
+                                                                disable="true"
+                                                                styleClass="marketplace-article-button"
+                                                                text="Commander">
+                                                            <HBox.margin>
+                                                                <Insets/>
+                                                            </HBox.margin>
+                                                        </Button>
+                                                    </children>
+                                                </HBox>
+                                            </children>
+                                            <VBox.margin>
+                                                <Insets top="10.0"/>
+                                            </VBox.margin>
+                                            <padding>
+                                                <Insets left="15.0" right="15.0"/>
+                                            </padding>
+                                        </VBox>
+                                    </children>
+                                    <HBox.margin>
+                                        <Insets left="40.0"/>
+                                    </HBox.margin>
+                                </VBox>
+                                <VBox alignment="CENTER" minWidth="400" prefHeight="200" prefWidth="400" spacing="33.0">
+                                    <children>
+                                        <TextField maxWidth="250" prefHeight="40" promptText="Nom de l'article" fx:id="tfName"/>
+                                        <TextField maxWidth="250" prefHeight="40" promptText="Description" fx:id="tfDescription"/>
+                                        <TextField maxWidth="250" prefHeight="40" promptText="Prix en €" fx:id="tfPrice"/>
+                                        <TextField maxWidth="250" prefHeight="40" promptText="Poids à l'unité (kg)" fx:id="tfWeight"/>
+                                        <ComboBox maxWidth="250" minWidth="250" prefHeight="40" promptText="Selectionner la catégorie" fx:id="cbTag"/>
+                                        <Button fx:id="fileChooser" minHeight="71" minWidth="400" mnemonicParsing="false" styleClass="filechooser-button" text="Parcourir" onMouseClicked="#onBrowse">
+                                            <graphic>
+                                                <Region styleClass="filechooser-button-img"/>
+                                            </graphic>
+                                        </Button>
+                                    </children>
+                                </VBox>
+                            </children>
+                            <VBox.margin>
+                                <Insets top="50.0"/>
+                            </VBox.margin>
+                        </HBox>
+                        <VBox alignment="CENTER" prefHeight="200" prefWidth="100">
+                            <children>
+                                <Button mnemonicParsing="false" styleClass="addCommandeButton" onMouseClicked="#onCreate" text="Ajouter l'article"/>
+                            </children>
+                        </VBox>
+                    </children>
                     <BorderPane.margin>
                         <Insets/>
                     </BorderPane.margin>
