--- a/src/main/resources/com/mmn/circuitscourts/fxml/Client/Marketplace.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Client/Marketplace.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -9,31 +8,28 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<StackPane fx:id="stackPane" minHeight="800.0" minWidth="1200.0" style="-fx-background-color: white;"
-           stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
-           fx:controller="com.mmn.circuitscourts.controller.client.MarketplaceController">
+<StackPane fx:id="stackPane" minHeight="800.0" minWidth="1200.0" style="-fx-background-color: white;" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mmn.circuitscourts.controller.client.MarketplaceController">
     <children>
         <BorderPane fx:id="container" prefHeight="700.0" prefWidth="1000.0">
             <left>
-                <fx:include source="Sidebar.fxml"/>
+                <fx:include source="Sidebar.fxml" />
             </left>
             <center>
                 <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
                     <children>
-                        <VBox maxHeight="130.0" prefHeight="130.0" prefWidth="100.0"
-                              styleClass="marketplace-topcontainer">
+                        <VBox maxHeight="130.0" prefHeight="130.0" prefWidth="100.0" styleClass="marketplace-topcontainer">
                             <children>
-                                <Label styleClass="main-title" text="Marketplace"/>
+                                <Label styleClass="main-title" text="Marketplace" />
                                 <HBox fx:id="tagsContainer" prefHeight="100.0" prefWidth="200.0">
                                     <children>
                                     </children>
                                     <VBox.margin>
-                                        <Insets top="5.0"/>
+                                        <Insets top="5.0" />
                                     </VBox.margin>
                                 </HBox>
                             </children>
                             <padding>
-                                <Insets bottom="15.0" left="50.0" top="49.0"/>
+                                <Insets bottom="15.0" left="50.0" top="49.0" />
                             </padding>
                         </VBox>
                         <ScrollPane maxHeight="668.0" maxWidth="950.0" prefHeight="670.0" prefWidth="200.0">
@@ -43,17 +39,26 @@
 
                                     </children>
                                     <padding>
-                                        <Insets bottom="10"/>
+                                        <Insets bottom="10" />
                                     </padding>
                                 </VBox>
                             </content>
                             <VBox.margin>
-                                <Insets left="2.0" top="1.0"/>
+                                <Insets left="2.0" top="1.0" />
                             </VBox.margin>
                         </ScrollPane>
                     </children>
                 </VBox>
             </center>
         </BorderPane>
+      <VBox fx:id="loadingContainer" alignment="CENTER" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: rgba(0, 0, 0, .25);" visible="true">
+         <children>
+            <HBox alignment="CENTER" maxWidth="400.0" prefHeight="100.0" prefWidth="200.0" style="-fx-opacity: 1" styleClass="loading-container">
+               <children>
+                  <Label style="-fx-text-fill: black;" styleClass="loading-title" text="Loading..." />
+               </children>
+            </HBox>
+         </children>
+      </VBox>
     </children>
 </StackPane>
