--- a/src/main/resources/com/mmn/circuitscourts/fxml/Producteur/Vehicules.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Producteur/Vehicules.fxml
@@ -10,11 +10,13 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<StackPane fx:id="stackPane" minHeight="800.0" minWidth="1200.0" style="-fx-background-color: #EAECF0;" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mmn.circuitscourts.controller.producteur.VehiculesController">
+<StackPane fx:id="stackPane" minHeight="800.0" minWidth="1200.0" style="-fx-background-color: #EAECF0;"
+           stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
+           fx:controller="com.mmn.circuitscourts.controller.producteur.VehiculesController">
     <children>
         <BorderPane fx:id="container" prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: white">
             <left>
-                <fx:include source="Sidebar.fxml" />
+                <fx:include source="Sidebar.fxml"/>
             </left>
             <center>
                 <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
@@ -51,7 +53,7 @@
                                                     <children>
                                                         <Label styleClass="successPopup-title"
                                                                text="Véhicule ajoutée !"/>
-                                                        <Label styleClass="successPopup-subtitle"
+                                                        <Label fx:id="popupSubtitle" styleClass="successPopup-subtitle"
                                                                text="Le véhicule immatriculé : X a bien été ajoutée !"/>
                                                     </children>
                                                     <padding>
@@ -80,34 +82,43 @@
                         </HBox>
                         <VBox fx:id="commandeTable" prefHeight="500" prefWidth="950" styleClass="commande-tableview">
                             <children>
-                                <HBox alignment="CENTER_LEFT" prefHeight="56" prefWidth="950" styleClass="commande-tableview-header">
+                                <HBox alignment="CENTER_LEFT" prefHeight="56" prefWidth="950"
+                                      styleClass="commande-tableview-header">
                                     <children>
-                                        <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="151.0" prefWidth="151.0" styleClass="commande-tableview-header-title" text="Numéro">
+                                        <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308"
+                                               maxWidth="151.0" prefWidth="151.0"
+                                               styleClass="commande-tableview-header-title" text="Numéro">
                                             <HBox.margin>
-                                                <Insets left="40.0" />
+                                                <Insets left="40.0"/>
                                             </HBox.margin>
                                         </Label>
-                                        <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" prefWidth="151.0" styleClass="commande-tableview-header-title" text="Libellé" />
-                                        <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="151.0" prefWidth="151.0" styleClass="commande-tableview-header-title" text="Poids" />
+                                        <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308"
+                                               prefWidth="151.0" styleClass="commande-tableview-header-title"
+                                               text="Libellé"/>
+                                        <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308"
+                                               maxWidth="151.0" prefWidth="151.0"
+                                               styleClass="commande-tableview-header-title" text="Poids"/>
                                     </children>
                                     <padding>
-                                        <Insets right="40.0" />
+                                        <Insets right="40.0"/>
                                     </padding>
                                 </HBox>
                             </children>
                         </VBox>
                         <Pane>
                             <children>
-                                <Button fx:id="addButton" layoutX="847.0" layoutY="-24.0" onMouseClicked="#onAddButton" mnemonicParsing="false" prefHeight="48.0" prefWidth="48.0" styleClass="addButton" textAlignment="CENTER">
+                                <Button fx:id="addButton" layoutX="847.0" layoutY="-24.0" onMouseClicked="#onAddButton"
+                                        mnemonicParsing="false" prefHeight="48.0" prefWidth="48.0"
+                                        styleClass="addButton" textAlignment="CENTER">
                                     <graphic>
-                                        <Region styleClass="addButton-img" />
+                                        <Region styleClass="addButton-img"/>
                                     </graphic>
                                 </Button>
                             </children>
                         </Pane>
                     </children>
                     <BorderPane.margin>
-                        <Insets bottom="30.0" left="40.0" right="40.0" top="30.0" />
+                        <Insets bottom="30.0" left="40.0" right="40.0" top="30.0"/>
                     </BorderPane.margin>
                 </VBox>
             </center>
