--- a/src/main/resources/com/mmn/circuitscourts/fxml/Client/Marketplace.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Client/Marketplace.fxml
@@ -1,35 +1,101 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<StackPane fx:id="stackPane" minHeight="800.0" minWidth="1200.0" style="-fx-background-color: white;" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mmn.circuitscourts.controller.client.MarketplaceController">
+<StackPane fx:id="stackPane" minHeight="800.0" minWidth="1200.0" style="-fx-background-color: white;"
+           stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
+           fx:controller="com.mmn.circuitscourts.controller.client.MarketplaceController">
     <children>
         <BorderPane fx:id="container" prefHeight="700.0" prefWidth="1000.0">
             <left>
-                <fx:include source="Sidebar.fxml" />
+                <fx:include source="Sidebar.fxml"/>
             </left>
             <center>
                 <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
                     <children>
-                        <VBox maxHeight="130.0" prefHeight="130.0" prefWidth="100.0" styleClass="marketplace-topcontainer">
+                        <VBox maxHeight="130.0" prefHeight="130.0" prefWidth="100.0"
+                              styleClass="marketplace-topcontainer">
                             <children>
-                                <Label styleClass="main-title" text="Marketplace" />
+                                <HBox>
+                                    <children>
+                                        <Label prefHeight="35.0" prefWidth="539.0" styleClass="main-title"
+                                               text="Marketplace"/>
+                                        <Pane prefHeight="35.0" prefWidth="362.0">
+                                            <children>
+                                                <VBox fx:id="successPopup" layoutX="-52.0" layoutY="-39.0"
+                                                      maxHeight="114.0" minWidth="400.0" prefHeight="114.0"
+                                                      prefWidth="400.0" styleClass="successPopup" visible="false">
+                                                    <HBox.margin>
+                                                        <Insets left="325.0"/>
+                                                    </HBox.margin>
+                                                    <children>
+                                                        <VBox maxHeight="4.0" minHeight="4.0" prefHeight="4.0"
+                                                              prefWidth="339.0" styleClass="successPopup-indicator"/>
+                                                        <HBox prefHeight="120.0" prefWidth="340.0"
+                                                              styleClass="successPopup-container">
+                                                            <children>
+                                                                <Label prefHeight="17.0" prefWidth="33.0">
+                                                                    <padding>
+                                                                        <Insets left="10.0" top="17.0"/>
+                                                                    </padding>
+                                                                    <graphic>
+                                                                        <Region styleClass="successPopup-img"/>
+                                                                    </graphic>
+                                                                </Label>
+                                                                <VBox prefHeight="110.0" prefWidth="312.0">
+                                                                    <children>
+                                                                        <Label styleClass="successPopup-title"
+                                                                               text="Commande validée !"/>
+                                                                        <Label styleClass="successPopup-subtitle"
+                                                                               text="La commande n°X a bien été validée !"/>
+                                                                    </children>
+                                                                    <padding>
+                                                                        <Insets left="15.0" top="15.0"/>
+                                                                    </padding>
+                                                                </VBox>
+                                                                <VBox alignment="TOP_RIGHT" prefHeight="120.0"
+                                                                      prefWidth="57.0">
+                                                                    <children>
+                                                                        <Button mnemonicParsing="false"
+                                                                                onMouseClicked="#onClosePopup"
+                                                                                prefHeight="28.0" prefWidth="28.0"
+                                                                                styleClass="successPopup-close">
+                                                                            <graphic>
+                                                                                <Region styleClass="successPopup-close-img"/>
+                                                                            </graphic>
+                                                                            <VBox.margin>
+                                                                                <Insets right="15.0" top="20.0"/>
+                                                                            </VBox.margin>
+                                                                        </Button>
+                                                                    </children>
+                                                                </VBox>
+                                                            </children>
+                                                        </HBox>
+                                                    </children>
+                                                </VBox>
+                                            </children>
+                                        </Pane>
+                                    </children>
+                                </HBox>
                                 <HBox fx:id="tagsContainer" prefHeight="100.0" prefWidth="200.0">
                                     <children>
                                     </children>
                                     <VBox.margin>
-                                        <Insets top="5.0" />
+                                        <Insets top="5.0"/>
                                     </VBox.margin>
                                 </HBox>
                             </children>
                             <padding>
-                                <Insets bottom="15.0" left="50.0" top="49.0" />
+                                <Insets bottom="15.0" left="50.0" top="49.0"/>
                             </padding>
                         </VBox>
                         <ScrollPane maxHeight="668.0" maxWidth="950.0" prefHeight="670.0" prefWidth="200.0">
@@ -39,26 +105,28 @@
 
                                     </children>
                                     <padding>
-                                        <Insets bottom="10" />
+                                        <Insets bottom="10"/>
                                     </padding>
                                 </VBox>
                             </content>
                             <VBox.margin>
-                                <Insets left="2.0" top="1.0" />
+                                <Insets left="2.0" top="1.0"/>
                             </VBox.margin>
                         </ScrollPane>
                     </children>
                 </VBox>
             </center>
         </BorderPane>
-      <VBox fx:id="loadingContainer" alignment="CENTER" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: rgba(0, 0, 0, .25);" visible="true">
-         <children>
-            <HBox alignment="CENTER" maxWidth="400.0" prefHeight="100.0" prefWidth="200.0" style="-fx-opacity: 1" styleClass="loading-container">
-               <children>
-                  <Label style="-fx-text-fill: black;" styleClass="loading-title" text="Loading..." />
-               </children>
-            </HBox>
-         </children>
-      </VBox>
+        <VBox fx:id="loadingContainer" alignment="CENTER" prefHeight="200.0" prefWidth="100.0"
+              style="-fx-background-color: rgba(0, 0, 0, .25);">
+            <children>
+                <HBox alignment="CENTER" maxWidth="400.0" prefHeight="100.0" prefWidth="200.0" style="-fx-opacity: 1"
+                      styleClass="loading-container">
+                    <children>
+                        <Label style="-fx-text-fill: black;" styleClass="loading-title" text="Loading..."/>
+                    </children>
+                </HBox>
+            </children>
+        </VBox>
     </children>
 </StackPane>
